--- a/Biblio/appsettings.json
+++ b/Biblio/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Bibl": "Server=.;Database=Bibl2Db;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
